# CONTROLE_KINCONY

./: .gitignore  CMakeLists.txt  CONTROLE_KINCONY.code-workspace  Manual_PC_Novo_CONTROLE_KINCONY_REVISAO.docx  documentacao_firmware_kincony.xlsx  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  entradas_kincony.c  idf_component.yml  main.c
main/config_server/: config_server_kincony.c  config_server_kincony.h
main/entradas_digitais/: entradas_kincony.c  entradas_kincony.h
main/logica_controle/: logica_controle.c  logica_controle.h
main/modbus_rtu_slave/: modbus_rtu_slave_esp.c  modbus_rtu_slave_esp.h
main/mqtt/: mqtt_kincony.c  mqtt_kincony.h
main/ota/: ota_github.c  ota_github.h
main/rtc/: rtc_ds1307.c  rtc_ds1307.h
main/saidas_digitais/: saidas_digitais_kincony.c  saidas_digitais_kincony.h
main/wifi/: wifi_kincony.c  wifi_kincony.h
manuais/: Manual_MQTT_FrontEnd_Aquapulse.xlsx
